# haiku

./: .gitignore  Cargo.toml  Config.toml  README.md  config.tests.toml  config.toml  config_example.toml  haiku.db  ollama-modelfile
contracts/haiku_event/: .gitignore  Scarb.toml  dojo_dev.toml
contracts/haiku_event/src/: lib.cairo
examples/starter-rpg/: .gitignore  pnpm-workspace.yaml
examples/starter-rpg/clients/react-client/: README.md  pnpm-lock.yaml
examples/starter-rpg/clients/react-client/src/: App.tsx
examples/starter-rpg/clients/react-client/src/typescript/: contracts.gen.ts  models.gen.ts
examples/starter-rpg/clients/react-recs-app/: .gitignore  package.json  vite.config.ts
examples/starter-rpg/clients/react-recs-app/src/: App.tsx  HaikuMessages.tsx
examples/starter-rpg/clients/react-recs-app/src/components/: HaikuMessages.tsx
examples/starter-rpg/clients/react-recs-app/src/dojo/: DojoContext.tsx
examples/starter-rpg/clients/react-recs-app/src/dojo/typescript/: contracts.gen.ts  models.gen.ts
examples/starter-rpg/contracts/: .gitignore  Config.starter.toml  Scarb.toml  dojo_dev.toml  haiku.toml
examples/starter-rpg/contracts/overlays/dev/: actions.toml
examples/starter-rpg/contracts/src/: constants.cairo  lib.cairo
examples/starter-rpg/contracts/src/components/: playable.cairo
examples/starter-rpg/contracts/src/elements/modes/: easy.cairo  hard.cairo  interface.cairo
examples/starter-rpg/contracts/src/elements/monsters/: boss.cairo  common.cairo  elite.cairo
examples/starter-rpg/contracts/src/elements/roles/: earth.cairo  fire.cairo  water.cairo
examples/starter-rpg/contracts/src/helpers/: seeder.cairo
examples/starter-rpg/contracts/src/models/: dungeon.cairo  index.cairo  player.cairo
examples/starter-rpg/contracts/src/tests/: test_move.cairo  test_setup.cairo
examples/starter-rpg/contracts/src/types/: direction.cairo  role.cairo
scripts/: install.sh
src/: chat_completion.rs  embedded_vector.rs  lib.rs  main.rs  secrets.rs  subcommands.rs  types.rs
src/actors/: config_handler.rs  event_handler.rs  llm_client.rs  mod.rs  prompt_handler.rs
src/subcommands/: build_config.rs  run.rs
src/types/: config_types.rs  mod.rs  providers.rs
src/types/llm_client/: mod.rs  provider.rs  provider_manager.rs  traits.rs
src/types/llm_client/providers/: baai_bge.rs  mod.rs  ollama.rs  openai.rs
src/utils/: constants.rs  db_manager.rs  llm_client.rs  mod.rs  prompt_event_message.rs
src/utils/llm_providers/: mod.rs  ollama.rs  openai.rs
src/utils/tests/: config.tests.toml
starter/spawn-and-move/: .gitignore  Scarb.toml
starter/starter-rpg/: package.json  pnpm-lock.yaml
starter/starter-rpg/clients/react-client/: components.json  dojoConfig.ts  package.json
starter/starter-rpg/clients/react-client/src/: App.tsx  index.css
starter/starter-rpg/clients/react-client/src/types/: index.ts
starter/starter-rpg/clients/react-recs-app/src/: App.tsx  HaikuMessages.tsx  main.tsx
starter/starter-rpg/clients/react-recs-app/src/dojo/: createSystemCalls.ts  setup.ts  useDojo.tsx
starter/starter-rpg/clients/react-recs-app/src/dojo/typescript/: contracts.gen.ts  models.gen.ts
starter/starter-rpg/contracts/: README.md  Scarb.toml
starter/starter-rpg/contracts/manifests/dev/base/abis/contracts/: dojo_starter_rpg-actions-4afbdb7a.json
starter/starter-rpg/contracts/manifests/dev/base/abis/models/: dojo_starter_rpg-Dungeon-437fd4ba.json  dojo_starter_rpg-Player-12268099.json
starter/starter-rpg/contracts/manifests/dev/base/contracts/: dojo_starter_rpg-actions-4afbdb7a.toml
starter/starter-rpg/contracts/manifests/dev/base/models/: dojo_starter_rpg-Dungeon-437fd4ba.toml  dojo_starter_rpg-Player-12268099.toml  haiku-AttackEvent-7bdb02fd.toml  haiku-HealEvent-4aa124a4.toml  haiku-MoveEvent-54195a34.toml  haiku-SpawnEvent-aa8d3a37.toml
starter/starter-rpg/contracts/manifests/dev/deployment/: manifest.json  manifest.toml
starter/starter-rpg/contracts/src/: store.cairo
starter/starter-rpg/contracts/src/components/: playable.cairo
starter/starter-rpg/contracts/src/elements/modes/: medium.cairo
starter/starter-rpg/contracts/src/elements/monsters/: interface.cairo
starter/starter-rpg/contracts/src/elements/roles/: air.cairo  interface.cairo
starter/starter-rpg/contracts/src/models/: dungeon.cairo
starter/starter-rpg/contracts/src/systems/: actions.cairo
starter/starter-rpg/contracts/src/tests/: setup.cairo  test_attack.cairo  test_heal.cairo
starter/starter-rpg/contracts/src/types/: mode.cairo  monster.cairo
tests/: db_manager_test.rs  llm_client_test.rs
(+4 files in other folders)
