[package]
name = "haiku"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0.197", default-features = false, features = ["derive"] }
dotenvy = { version = "0.15.7", default-features = false }
envy = { version = "0.4.2", default-features = false }
eyre = {version = "0.6", default-features = false, features = ["auto-install"]}
tokio-rusqlite = {version = "0.5.0"}
rusqlite = {version = "0.30.0"}
poise = { version = "0.6.1" }
toml = "0.7"
starknet = "0.11.0"
starknet-crypto = "0.7.0"
starknet-types-core = "~0.1.4"
dojo-types = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.6" }
torii-client = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.6" }
torii-grpc = { git = "https://github.com/dojoengine/dojo", features = [
    "client",
], tag = "v1.0.0-alpha.6" }
torii-relay = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.6" }
dojo-world = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.6" }
serde_json = "1.0"

cainome = { git = "https://github.com/cartridge-gg/cainome" }
cairo-lang-filesystem = "=2.7.0"
scarb = { git = "https://github.com/software-mansion/scarb", tag = "v2.7.0" }
sqlite-vec = "0.1.1"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12.2"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[patch.crates-io]
# Remove this patch once the following PR is merged: <https://github.com/xJonathanLEI/starknet-rs/pull/615>
#
# To enable std feature on `starknet-types-core`.
# To re-export the entire `felt` module from `starknet-types-core`.
starknet-core = { git = "https://github.com/kariy/starknet-rs", branch = "dojo-patch" }
starknet-types-core = { git = "https://github.com/dojoengine/types-rs", rev = "289e2f0" }
