[package]
name = "haiku"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
# general
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
eyre = {version = "0.6", default-features = false, features = ["auto-install"]}

# tokio related
tokio = { version = "1.0", features = ["macros", "signal", "rt-multi-thread"] }
tokio-retry = { version = "0.3.0", default-features = false }
tokio-rusqlite = {version = "0.5.0", default-features = false }
async-trait = {version = "0.1.81", default-features = false}

# starknet / dojo
starknet = { version = "0.11.0" }
starknet-crypto = { version = "0.7.0", default-features = false }
dojo-types = { git = "https://github.com/Larkooo/dojo", branch = "fix-from-model" }
torii-client = { git = "https://github.com/Larkooo/dojo", branch = "fix-from-model" }
torii-grpc = { git = "https://github.com/Larkooo/dojo", branch = "fix-from-model" }
torii-relay = { git = "https://github.com/Larkooo/dojo", branch = "fix-from-model" }
dojo-world = { git = "https://github.com/Larkooo/dojo", branch = "fix-from-model" }
scarb = { git = "https://github.com/software-mansion/scarb", tag = "v2.7.0" }
sqlite-vec = {version = "0.1.1", default-features = false}

# others
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter"] }
toml = { version = "0.7", default-features = false, features = ["parse", "display"] }
clap = { version = "4.5.16", default-features = false, features = ["derive"] }
config = { version = "0.13.1", default-features = false }
camino = { version = "1.1.6", default-features = false }
serenity = { version = "0.12.2", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = {version = "0.30.0", default-features = false }

[patch.crates-io]
# Remove this patch once the following PR is merged: <https://github.com/xJonathanLEI/starknet-rs/pull/615>
#
# To enable std feature on `starknet-types-core`.
# To re-export the entire `felt` module from `starknet-types-core`.
starknet-core = { git = "https://github.com/kariy/starknet-rs", branch = "dojo-patch" }
starknet-types-core = { git = "https://github.com/dojoengine/types-rs", rev = "289e2f0" }
